package GameComponents.Board;

import Controllers.GuiController;
import GameComponents.Player;

public class CardJailPass extends ChanceCard {
    public CardJailPass(String cardName) {
        super(cardName);
    }


    public void playCard(Player currentPlayer) {
        currentPlayer.giveJailPass();
    }
}
